# Notas-App

./: .gitignore  Archivos.h  CMakeLists.txt  Cadenas.h  Carpetas.h  ControlBD.h  Cuenta.h  Lista.h  Mensajes.h  Nota.h  Notas App.cpp  Tarea.h  main.cpp
include/: Archivos.h  Cadenas.h  Carpetas.h  ControlBD.h  Cuenta.h  Lista.h  Mensajes.h  Tarea.h  linux_conio.h  system_utils.h
src/: main.cpp
